# bookslice

./: .flake8  .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: black.yml  flake8.yml  python-package.yml
admin/: __init__.py  authors_view.py  books_of_user_view.py  books_view.py  generes_view.py  static_files_view.py  text_of_book_view.py
admin/views/: achievements_view.py  genres_view.py  text_of_book_view.py
admin_panel/: localization.py
admin_panel/admin_views/: authors.py  books.py  generes.py  text_of_book.py  users.py
app/: __init__.py  config.py
app/admin/: __init__.py
app/admin/views/: achievements_of_users_view.py  base_view.py  bookmarks_view.py  friend_requests.py  friendships_view.py  notifications_view.py  summarized_books_of_user_view.py  tests_of_user_view.py  users_view.py
app/bookslice/: friends_model.py  notifications_model.py  routes.py
app/bookslice/functions/: AI.py  notification_sender.py  notification_sendler.py
app/catalog/: routes.py
app/catalog/functions/: recommendations.py  search_func.py  (+1 more)
app/llm_functions/: __init__.py
app/models/: __all_models.py  __init__.py  authors.py  bookmarks.py  books_of_user.py  description_of_user.py  friend_requests.py  friendships.py  genres.py  notifications.py  summarized_books_of_user.py  tests_of_user.py  users.py
app/profile/: routes.py
app/templates/: base.html
books_api/: books.py
books_api/books/: 1001.txt
db/: app.db
fixtures/: create_fixtures.py
forms/: login_form.py  reg_form.py
functions/: AI.py  __init__.py  split_book.py  sum_alg.py
models/: __all_models.py  __init__.py  achievements.py  achievements_of_users.py  authors.py  books.py  books_of_user.py  db_session.py  description_of_user.py  generes.py  text_of_book.py  user.py  users.py
requirements/: dev.txt  prod.txt
static/css/: base.css  index.css  login-reg.css  profile.css  style.css
static/forms/: __init__.py  chat.py  reg_form.py  sum_by_id_form.py  sum_form.py  summ_by_id_form.py  summ_form.py
static/img/: site.webmanifest
static/js/: secundomer.js
templates/: 404.html  about_book.html  admin_login.html  ask.html  base.html  catalog.html  check_speed_of_reading.html  index.html  login.html  profile.html  read_book.html  register.html  summarize.html  test_by_book.html  unauth.html
templates/admin/: admin_login.html  index.html
(+27 files in other folders)
