[project]
name = "bookslice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "babel==2.16.0",
    "black==24.10.0",
    "blinker==1.8.2",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "flake8==7.1.1",
    "flask==3.0.3",
    "flask-admin==1.6.1",
    "flask-babel==4.0.0",
    "flask-debugtoolbar==0.16.0",
    "flask-login==0.6.3",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "fuzzywuzzy==0.18.0",
    "greenlet==3.1.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "joblib==1.4.2",
    "langchain-text-splitters>=0.3.6",
    "markdown==3.7",
    "markupsafe==3.0.2",
    "mccabe==0.7.0",
    "mistralai==1.2.3",
    "mypy-extensions==1.0.0",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "numpy==2.1.2",
    "packaging==24.1",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "pycodestyle==2.12.1",
    "pyflakes==3.2.0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "regex==2024.9.11",
    "requests==2.32.3",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "sqlalchemy==2.0.36",
    "threadpoolctl==3.5.0",
    "tqdm==4.66.6",
    "typing-extensions==4.12.2",
    "urllib3==2.2.3",
    "werkzeug==3.0.4",
    "wtforms==2.3.3",
]
prod = [
    "babel==2.16.0",
    "blinker==1.8.2",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "flask==3.0.3",
    "flask-admin==1.6.1",
    "flask-babel==4.0.0",
    "flask-login==0.6.3",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "fuzzywuzzy==0.18.0",
    "greenlet==3.1.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "joblib==1.4.2",
    "langchain-text-splitters>=0.3.6",
    "markdown==3.7",
    "markupsafe==3.0.2",
    "mistralai==1.2.3",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "numpy==2.1.2",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "regex==2024.9.11",
    "requests==2.32.3",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "sqlalchemy==2.0.36",
    "threadpoolctl==3.5.0",
    "tqdm==4.66.6",
    "typing-extensions==4.12.2",
    "urllib3==2.2.3",
    "werkzeug==3.0.4",
    "wtforms==2.3.3",
]
